<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="8dp"
    tools:context=".activity.SplashActivity">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/app_logo"
        android:src="@drawable/app_icon"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:contentDescription="@string/icon" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_title"
        android:layout_margin="10dp"
        android:text="@string/app_name"
        android:textStyle="italic"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_description"
        android:layout_margin="10dp"
        android:text="@string/app_motto"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_gravity="center"/>
</LinearLayout>