<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/transparent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/exit_text_layout"
        android:background="@drawable/exit_border"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exit_text"
            android:layout_margin="10dp"
            android:text="@string/exit"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exit_confirm_text"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/exit_confirmation"
            android:textColor="@color/black"
            android:textSize="16sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:gravity="end"
            android:background="@color/white">
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:id="@+id/exit"
                android:layout_gravity="center"
                android:text="@string/exit_btn"
                android:textColor="@color/colorPrimaryDark"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancel"
                android:text="@string/cancel_btn"
                android:textColor="@color/white"
                style="?android:attr/buttonBarStyle" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>