<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    tools:context=".activity.CommunityActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:elevation="4dp"
        app:title="@string/community"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scroll_view"
        android:layout_below="@id/toolbar"
        android:fillViewport="false"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:orientation="vertical"
            android:background="@drawable/post_border"
            tools:ignore="UselessParent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/post_image"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="4dp"
                android:background="#fff"
                tools:ignore="ContentDescription" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="10dp"
                android:orientation="horizontal"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="vertical"
                    android:layout_gravity="start"
                    android:layout_marginHorizontal="5dp"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_favorite_border"
                        android:id="@+id/favorite"
                        android:layout_gravity="center_horizontal"
                        tools:ignore="ContentDescription"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/likes"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_gravity="center"
                        android:id="@+id/like"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="5dp"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_file_download"
                        android:id="@+id/download"
                        android:layout_gravity="center_horizontal"
                        tools:ignore="ContentDescription"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/downloads"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_gravity="center"
                        android:id="@+id/download_text"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:layout_gravity="end"
                    android:layout_marginHorizontal="5dp"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_nav_baseline_share"
                        android:id="@+id/share"
                        android:layout_gravity="center_horizontal"
                        tools:ignore="ContentDescription"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shares"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_gravity="center"
                        android:id="@+id/share_text"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>